# hello_wasm

./: Cargo.toml  Makefile  README.md  index.html
.github/workflow/: build_and_deploy.yml
pkg/: hello_wasm.d.ts  hello_wasm.js  hello_wasm_bg.wasm  hello_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
