[package]
name = "hello_wasm"
version = "0.1.0"
authors = ["Sam Liu <ontouchstart@gmail.com>"]
description = "Play with rust in the browser via wasm-pack"
license = "MIT"
repository = "https://github.com/ontouchstart/hello_wasm"
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.71"
web-sys = { version = "0.3.48", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
